# sbw2csv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
.github/ISSUE_TEMPLATE/: bug_form  candidate-suggestion.yaml  form.yaml
.github/workflows/: ibmcloud-codeengine.yml  pr-test.yml  trivy.yml
cf/: .cfignore  manifest.yml  nginx.conf
cli/: CMakeLists.txt  main.cpp
database/: Dockerfile  firstrun.sh  index.js  package.json
database/scripts/: build_image.sh  factory-reset.js  rebuild.js  run_image.sh  stop_image.sh  stopdb.js  test_connection.sh
docs/: HowItsMade.odp  HowItsMade.osp  HowItsMade.xcf  Howitsmade.mpeg  attribution.txt  out.ogv  post.odt  post2.odt
services/: .dockerignore  .gitignore  Dockerfile  action.js  app.js  index.js  manifest.yaml  package.json
services/cli/: CMakeLists.txt  Dockerfile
services/lib/: cos.js  database.js
services/public/stylesheets/: style.css
services/routes/: analytics.js  convert.js  index.js
services/views/: index.pug
ui/: .dockerignore  Dockerfile  README.md  manifest.yml  nginx.conf  package.json  vue.config.js
ui/ce/nginx-default-cfg/: proxies.conf
ui/ce/nginx-start/: prestart.sh
ui/ce/nginx.d/: default.conf
ui/public/: index.html
ui/src/: App.vue  main.js  router.js
ui/src/api/: analytics.js
ui/src/components/AppHeader/: AppHeader.vue  index.js
ui/src/styles/: _carbon-fixes.scss  _carbon.scss  _theme.scss  sbwapp.scss
ui/src/views/LandingPage/: LandingPage.vue
ui/src/views/Privacy/: Privacy.vue  index.js
